--- a/index.html
+++ b/index.html
@@ -271,8 +271,8 @@
       transform: scale(1.1);
     }
   </style>
-  <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="fontawesome-free-6.7.2-web/css/all.css">
+  <link rel="stylesheet" href="styles.pure.css">
+  
   
 
 
